# tuyaopen-embedded-core

./: .gitignore  .gitmodules  README.md  README_zh.md
boards/sg200x/: toolchain_sg200x_rv64_musl.cmake
components/: CMakeLists.txt
components/cJSON/: CMakeLists.txt
components/http_client/: CMakeLists.txt
components/http_client/coreHTTP/: core_http_config.h
components/http_client/coreHTTP/source/: core_http_client.c
components/http_client/src/: http_client_wrapper.c  http_download.c
components/mbedtls/: CMakeLists.txt
components/mbedtls/src/: cipher_wrapper.c
components/mqtt_client/: CMakeLists.txt
components/mqtt_client/src/: mqtt_client_wrapper.c
components/mqtt_client/transport/: tcp_transporter.c  tls_transporter.c  tuya_transport.c
components/tal_communication/: CMakeLists.txt
components/tal_communication/tal_bluetooth/nimble/host/: ble_att.c  tuya_ble_os_adapter.c
components/tal_communication/tal_bluetooth/src/: tal_bluetooth.c
components/tal_communication/tal_wifi/include/: tal_wifi.h
components/tal_communication/tal_wired/src/: tal_wired.c
components/tal_kv/: CMakeLists.txt
components/tal_kv/include/: tal_kv.h
components/tal_kv/port/: lfs_config.h
components/tal_kv/src/: kv_serialize.c  tal_kv.c
components/tal_security/: CMakeLists.txt
components/tal_security/src/: tal_hash.c  tal_x509.c
components/tal_system/: CMakeLists.txt
components/tal_system/include/: tal_api.h  tal_fs.h  tal_log.h  tal_memory.h
components/tal_system/src/: tal_event.c  tal_fs.c1  tal_log.c  tal_sw_timer.c  tal_workqueue.c
components/tuya_cloud_service/: CMakeLists.txt
components/tuya_cloud_service/ble/: ble_channel.c  ble_cryption.c  ble_dp.c  ble_mgr.c  ble_trsmitr.c
components/tuya_cloud_service/cloud/: atop_base.c  atop_service.c  iotdns.c  matop_service.c  mqtt_bind.c  mqtt_service.c  tuya_endpoint.c  tuya_http.c  tuya_iot.c  tuya_ota.c  tuya_register_center.c
components/tuya_cloud_service/lan/: lan_sock.c  tuya_lan.c
components/tuya_cloud_service/netcfg/: ap_netcfg.c  netcfg.c
components/tuya_cloud_service/netmgr/: netconn_wifi.c  netconn_wired.c
components/tuya_cloud_service/protocol/: tuya_protocol.c
components/tuya_cloud_service/schema/: dp_schema.c  tuya_iot_dp.c
components/utilities/: CMakeLists.txt
components/utilities/include/: tuya_list.h
components/utilities/src/: uni_random.c
demos/switch_demo/: CMakeLists.txt  main.c
port/: CMakeLists.txt
port/include/common/: tuya_kconfig.h
port/linux/: tkl_output.c
