set(COMPONENTS_TO_BUILD "")

file(GLOB COMPONENT_DIRS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*/CMakeLists.txt")

foreach(COMPONENT_DIR IN LISTS COMPONENT_DIRS)

    get_filename_component(COMPONENT_NAME "${COMPONENT_DIR}" DIRECTORY)
    message(STATUS "Component name: ${COMPONENT_NAME}")
    string(TOUPPER ${COMPONENT_NAME} COMPONENT_NAME_UPPER)
    list(APPEND COMPONENTS_TO_BUILD ${COMPONENT_NAME})

endforeach()

list(REMOVE_DUPLICATES COMPONENTS_TO_BUILD)

foreach(COMPONENT IN LISTS COMPONENTS_TO_BUILD)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${COMPONENT}/CMakeLists.txt")
        add_subdirectory(${COMPONENT})

        list(APPEND COMPONENT_LIBS ${COMPONENT})
    endif()
endforeach()

set(COMPONENT_LIBS ${COMPONENT_LIBS} PARENT_SCOPE)