get_filename_component(COMPONENT_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)

file(GLOB_RECURSE SRCS 
    "src/*.c"
)

set(INCS 
    "include"
)

add_library(${COMPONENT_NAME} 
    STATIC
    ${SRCS}
)

target_include_directories(${COMPONENT_NAME}
    PUBLIC
    ${INCS}
)

target_link_libraries(${COMPONENT_NAME} PUBLIC tal_system tal_kv tal_communication mbedtls)

# target_compile_definitions(${COMPONENT_NAME} PUBLIC "-DHTTP_DO_NOT_USE_CUSTOM_CONFIG")
